# adopt

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.cargo/: config.toml
agent/: intent-card.json
src/: apply.rs  cli.rs  converge.rs  doctor.rs  lib.rs  main.rs  marker.rs  reconcile.rs  report.rs  scan.rs  types.rs  verify.rs
tests/: acceptance_ac1.rs  acceptance_ac10.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_ac8.rs  acceptance_ac9.rs  apply_ac1_dryrun.rs  apply_ac3_serialization.rs  apply_ac4_ac5_daemon_skip.rs  apply_ac6_idempotent.rs  apply_ac7_first_failure_stops.rs  apply_ac8_injection_guard.rs  converge_ac1_idempotent.rs  converge_ac2_regression.rs  proptest_invariants.rs  report_ac1_dry_run.rs  report_ac2_required_flags.rs  report_ac3_non_actionable.rs  report_ac4_severity.rs  report_ac5_same_key.rs  report_ac6_docket_absent.rs  report_ac7_from_json.rs  report_ac8_metachar.rs  report_scion_truth.rs
